objects/Display_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>Column_10__c</fullName>
        <label>Column 10</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_11__c</fullName>
        <label>Column 11</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_12__c</fullName>
        <label>Column 12</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Pos.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Display Hierarchies</relationshipLabel>
        <relationshipName>Display_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Category__c</fullName>
        <label>Record Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Display Hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Record_Category__c</columns>
        <columns>Column_1__c</columns>
        <columns>Column_2__c</columns>
        <columns>Column_3__c</columns>
        <columns>Column_4__c</columns>
        <columns>Column_5__c</columns>
        <columns>Column_6__c</columns>
        <columns>Column_7__c</columns>
        <columns>Column_8__c</columns>
        <columns>Column_9__c</columns>
        <columns>Column_10__c</columns>
        <columns>Column_11__c</columns>
        <columns>Column_12__c</columns>
        <columns>Column_13__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DH-{00000}</displayFormat>
        <label>Display Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Display Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>